# AxiomTrace

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CHANGELOG_zh.md  CMakeLists.txt  LICENSE  PLAN.md  PLAN_zh.md  README.md  README_zh.md  ROUTE.md  ROUTE_zh.md  RULES.md  RULES_zh.md
.github/workflows/: ci.yml
baremetal/: axiom_config.h  axiomtrace.h
baremetal/backend/: axiom_backend.c  axiom_backend.h  axiom_backend_deferred.c  axiom_backend_deferred.h  axiom_backend_memory.c
baremetal/core/: axiom_crc.c  axiom_crc.h  axiom_encode.h  axiom_event.c  axiom_event.h  axiom_filter.c  axiom_filter.h  axiom_ring.c  axiom_ring.h  axiom_timestamp.c  axiom_timestamp.h
baremetal/examples/: CMakeLists.txt  example_full.c  example_minimal.c
baremetal/frontend/: axiom_frontend.h
baremetal/include/: axiom_static_assert.h
baremetal/port/: axiom_port.h  axiom_port_generic.c
baremetal/ports/: CMakeLists.txt
baremetal/ports/arch/cortex-m/: CMakeLists.txt  axiom_port_cortex_m.c
baremetal/ports/arch/riscv/: CMakeLists.txt  axiom_port_riscv.c
baremetal/ports/esp32/: CMakeLists.txt  Kconfig  README.md  axiom_backend_uart.c  axiom_port_esp32.c
baremetal/ports/nrf52/: CMakeLists.txt  README.md  axiom_backend_rtt.c  axiom_backend_rtt.h  axiom_port_nrf52.c  axiom_port_nrf52.h
baremetal/ports/soc/esp32/: CMakeLists.txt
baremetal/ports/soc/nrf52/: CMakeLists.txt
baremetal/ports/soc/stm32f4/: CMakeLists.txt
baremetal/ports/stm32/: CMakeLists.txt  README.md  axiom_backend_uart.c  axiom_port_stm32.c
docs/: platform_reference.md  porting_guide.md
docs/changelog/: CHANGELOG.md  CHANGELOG_zh.md
docs/project/: PLAN.md  PLAN_zh.md  ROUTE.md  ROUTE_zh.md  RULES.md  RULES_zh.md
docs/reference/: DIR_STRUCTURE.md  platform_reference.md  porting_guide.md
examples/: CMakeLists.txt
examples/example_precompiled/: CMakeLists.txt  example_precompiled.c
examples/ports/: README.md
spec/: api_reference.md  api_reference_zh.md  backend_contract.md  backend_contract_zh.md  decoder_protocol.md  decoder_protocol_zh.md  event_dictionary.md  event_dictionary_zh.md  event_model.md  event_model_zh.md  fault_capsule.md  fault_capsule_zh.md  minimalist_architecture_analysis.md  minimalist_architecture_analysis_zh.md  static_analysis.md  static_analysis_zh.md  toolchain_ecosystem_design.md  toolchain_ecosystem_design_zh.md  versioning.md  versioning_zh.md  wire_format.md  wire_format_zh.md
tests/: test_integration.sh  test_python_tools.py
tests/host/: CMakeLists.txt  test_crc.c  test_event.c  test_filter.c  test_placeholder.c  test_ring.c
tool/: pyproject.toml
tool/benchmark/: host_benchmark.c
tool/decoder/: axiom_decoder.py
tool/golden/: update_golden.py
tool/golden/expected/: frame_01_minimal.json  frame_02_u16.json
tool/scripts/: amalgamate.py
tool/src/axiomtrace_tools/: __init__.py  cli.py  decoder.py
tool/src/axiomtrace_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
